# scout-edge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: config.py  main.py
src/agents/: memory.py  trend_agent.py
src/db/: vector_store.py
src/tools/: arxiv_tool.py  github_tool.py  serper_search_tool.py  trend_analyzer_tool.py
src/ui/: cli.py  web.py
